# Intrusion-Detection-in-SDN-networks-PDC-Project-

./: README.md
backend/: CMakeLists.txt  DetectionEngine.cpp  DetectionEngine.h  Packet.h  Timer.h  TrafficGenerator.cpp  TrafficGenerator.h  build.bat  main.cpp
backend/include/: structs.h
backend/src/: node_simulator.cpp
frontend/: attack_lab.py  bridge.py  main.py  performance_lab.py
frontend/panels/: topology_panel.py
